Alignment correction on product/contact page

--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -2,6 +2,7 @@
   font-size: 3vw;
   width: 50%;
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 .product-price {
@@ -30,12 +31,12 @@
 }
 
 .product-contact-form-holster {
-  display: flex;
   width: 100%;
   margin: 0;
   justify-content: center;
   align-items: center;
   height: 50vh;
+  padding-top: 0;
 }
 
 .product-contact-form {
